# jwtlicensing

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
app/: CMakeLists.txt  main.cpp
